1-examples/1-simple_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  # CHANGE ME : Your pod name
  name: java
spec:
  containers:
    # CHANGE ME : Your container name
  - name: dataplatform-java
    # CHANGE ME : Your app docker image URI (image:tag)
    image: 614303399241.dkr.ecr.eu-west-1.amazonaws.com/dataplatform/java:17
        
    resources:
      # Max resources
      limits:
        cpu: 100m
        memory: 100Mi
      # Min resources
      requests:
        cpu: 100m
        memory: 100Mi
