1-examples/6-deployment_with_env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # CHANGE ME : Your deployment name
  name: java-deployment
  labels:
    # CHANGE ME : Your app name
    app: java
spec:
  # CHANGE ME : Number of replicas of your app
  replicas: 2

  # This deployment will manage pods
  # that have label app: java
  selector:
    matchLabels:
      # CHANGE ME : Your app name ( Should match pod template label below )
      app: java

  # Template configuration for pods that it will create
  template:
    metadata:
      labels:
        # CHANGE ME : Your app name
        app: java
    spec:
      containers:
        # CHANGE ME : Your container name
      - name: dataplatform-java
        # CHANGE ME : Your app docker image URI (image:tag)
        image: 614303399241.dkr.ecr.eu-west-1.amazonaws.com/dataplatform/java:17

        # Check if my application is alive
        livenessProbe:
          httpGet:
            # CHANGE ME : Your app healthcheck endpoint
            path: /healthz
            # CHANGE ME : The Port where your app is running 
            port: 8080
            
        resources:
          # Max resources
          limits:
            cpu: 100m
            memory: 100Mi
          # Min resources
          requests:
            cpu: 100m
            memory: 100Mi
          
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        
        ## Adding env var to container ######
