1-examples/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  # CHANGE ME : Your service name
  name: java-service
spec:
  # Targets are pods that have label app: java
  selector:
    # CHANGE ME : Your app name
    app: java

  # Ingress traffic to port 80 of this service, will be redirected to port 8080 in target pod    
  ports:
    - protocol: TCP
      # Service port
      port: 80
      # CHANGE ME : The Port where your app is running 
      targetPort: 8080
