1-examples/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # CHANGE ME : Change to Ingress name
  name: java-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  # CHANGE ME : This is the DNS of your application
  - host: my_java_app.dktapp.cloud
  
    # Any request to this DNS will be redirected to java-service port 80
    http:
      paths:
          # CHANGE ME : Your application path
        - path: /test(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              # CHANGE ME : Change to Service name
              name: java-service
              port:
                # CHANGE ME : Change to Service port
                number: 80
